--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800;900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -7,5 +7,38 @@
 @layer base {
   body {
     @apply font-body
+  }
+}
+
+@layer utilities {
+
+  /* Scroll thumb styles */
+  .scrollbar::-webkit-scrollbar {
+    width: .5rem;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #27272E;
+    border-radius: 1rem;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:active {
+    background-color: #131314;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #3B3B46;
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
+  /* Scroll track styles (Background) */
+  .scrollbar::-webkit-scrollbar-track {
+    background: #131314;
+    border-radius: 4px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track:hover,
+  .scrollbar::-webkit-scrollbar-track:active {
+    background: #131314;
   }
 }
